<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:clickable="true"
    android:background="#F8F8FB"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:focusable="true">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_4sdp"
            android:layout_marginHorizontal="@dimen/_24sdp"
            android:background="@drawable/divider_style"
            android:layout_marginTop="@dimen/_16sdp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cornerRadius="@dimen/_50sdp"
            android:elevation="0dp"
            app:cardElevation="0dp"
            app:cardBackgroundColor="#F8F8FB"
            android:layout_margin="@dimen/_12sdp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/images_holder"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_180sdp"
                    app:cardCornerRadius="@dimen/_16sdp"
                    android:elevation="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:scaleType="fitXY"
                        android:elevation="10dp"
                        app:layout_constraintTop_toTopOf="parent"
                        android:contentDescription="@string/image_banner_of_the_news_item" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/txtV_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:ellipsize="end"
                    android:fontFamily="@font/queens"
                    android:textStyle="bold"
                    android:maxLines="2"
                    android:lineSpacingExtra="@dimen/_5sdp"
                    android:paddingHorizontal="@dimen/_4sdp"
                    android:textColor="@color/blackish_text"
                    android:textSize="@dimen/_18ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/images_holder"
                    tools:text="title of the news item" />

                <TextView
                    android:id="@+id/txtV_body"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/queens"
                    android:maxLines="3"
                    android:textSize="@dimen/_16ssp"
                    android:lineSpacingExtra="@dimen/_2sdp"
                    android:paddingHorizontal="@dimen/_4sdp"
                    android:textColor="@color/blackish_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtV_title"
                    tools:text="body of the news item typically longer" />

                <TextView
                    android:id="@+id/txtV_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textSize="@dimen/_13ssp"
                    android:paddingHorizontal="@dimen/_4sdp"
                    android:textColor="@color/text_date"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtV_body"
                    tools:text="date" />

                <ImageButton
                    android:id="@+id/imgBtn_notSaved"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/unselected"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_save_empty"
                    android:elevation="10dp"
                    android:contentDescription="@string/icon_to_save_the_news_item" />

                <ImageButton
                    android:id="@+id/imgBtn_saved"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/green"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_save_filled"
                    android:elevation="10dp"
                    android:visibility="gone"
                    android:contentDescription="@string/icon_to_save_the_news_item" />

                <Button
                    android:id="@+id/btn_read"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:backgroundTint="@color/green"
                    android:fontFamily="sans-serif"
                    android:text="@string/read"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintTop_toBottomOf="@+id/txtV_date" />

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:backgroundTint="@color/green"
                    android:text="@string/save"
                    android:fontFamily="sans-serif"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline2"
                    app:layout_constraintTop_toBottomOf="@+id/txtV_date" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

</LinearLayout>